refactor: refctor edit event component to require edited event

--- a/src/app/feature/dashboard/dashboard.component.html
+++ b/src/app/feature/dashboard/dashboard.component.html
@@ -15,7 +15,9 @@
         (dismissEdit)="closeEditForm()" />
 
       @if (activeTimelineId(); as timelineId) {
-        <app-edit-event />
+        <app-edit-event
+          [editedEvent]="editedEvent()"
+          [isLoading]="isEventLoading()" />
 
         <app-shared-timeline
           [timelineId]="timelineId"
