refactor: refactor edit with loading editable event by store

--- a/src/app/feature/dashboard/dashboard.component.html
+++ b/src/app/feature/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
           [isEditable]="true"
           [isAuthorized]="true"
           (delete)="deleteEvent($event)"
-          (edit)="editEvent($event)" />
+          (edit)="navigateToEditEvent($event.id)" />
 
         <app-modal-confirm
           [show]="showConfirmWindow()"
