fix: fix scrool tot top of page after edit event click

--- a/src/app/shared/layout/layout.component.html
+++ b/src/app/shared/layout/layout.component.html
@@ -1,5 +1,6 @@
 <app-header />
 <div
+  id="top"
   class="bg-base-100 flex min-h-[calc(100vh-70px-64px)] place-content-center">
   <div class="relative my-4 w-full">
     <div
